update game page

--- a/html/game.html
+++ b/html/game.html
@@ -51,7 +51,7 @@
             <li><a href="#"><button><i class="fa fa-google"></i></button></a></li>
             <li><a href="#"><button><i class="fa fa-instagram"></i></button></a></li>
             <li><a href="#"><button><i class="fa fa-linkedin"></i></button></a></li>
-            <li><a href="#"><button><i class="fa fa-github"></i></button></a></li>
+            <li><a href="https://github.com/GalgaloDuba/Online-Game-Website"><button><i class="fa fa-github"></i></button></a></li>
 
           </ul>
         </div>
