some changes on game .html and iframe.html

--- a/html/game.html
+++ b/html/game.html
@@ -27,13 +27,12 @@
              <h2>Brain Games</h>
              <ul>
                 <li><a href="../html/iframe.html" target="myIframe">All Games</a></li>
-                 <li><a href="#logic" onclick="sendmessage('logic')">Strategy and Logic</a></li>
+                 <li><a href="#logic" onclick="sendmessage('logic')">Speed and Logic</a></li>
                  <li><a href="#memory" onclick="sendmessage('memory')">Memory and Recall</a></li>
                  <li><a href="#decision" onclick="sendmessage('decision')">Decision-Making</a></li>
              </ul>
             </div>
           </div>
-
 <!-- Iframe-Section HTML Code -->
         <div class="width-70">
           <div class="frame">
@@ -41,7 +40,6 @@
          </div>
         </div>
     </div>
-
     <div class="footer">
       <footer>
         <div class="social" id="social">
@@ -52,13 +50,11 @@
             <li><a href="#"><button><i class="fa fa-instagram"></i></button></a></li>
             <li><a href="#"><button><i class="fa fa-linkedin"></i></button></a></li>
             <li><a href="https://github.com/GalgaloDuba/Online-Game-Website"><button><i class="fa fa-github"></i></button></a></li>
-
           </ul>
         </div>
         <div class="copyright">
           <p> © 2024 Copyright: 2Brothers.com</p><br>
         </div>
-
       </footer>
     </div>
     <script src="../js/game.js"></script>
