--- a/html/iframe.html
+++ b/html/iframe.html
@@ -10,7 +10,7 @@
   <div id="all" class="game"><h2>All Games</h2></div>
   <!-- Strategy and Logic Games-Section HTML Code -->
   <div id="logic" class="game">
-  <h2>Strategy and Logic Games</h2>
+  <h2>Speed and Logic Games</h2>
     <div class="row" >
        <div class="col-4">
          <a href="#"><img src="../Images/dicegame.png" alt="" id="image"/>
@@ -19,9 +19,9 @@
          </a>
        </div>
        <div class="col-4">
-         <a href="#"><img src="../Images/math game 1.png" alt="" id="image"/>
+         <a href="#"><img src="../Images/type.png" alt="" id="image"/>
           <div class="text" id="playtext">PLAY</div>
-          <h4>Math Game</h4>
+          <h4>Type speed Game</h4>
          </a>
        </div>
        </div>
@@ -49,7 +49,7 @@
        <h2>Quick Decision-Making Games</h2>
        <div class="row" >
         <div class="col-4">
-            <a href="#"><img src="../Images/rock.jpg" alt="" id="image"/>
+            <a href="#"><img src="../Images/rock1.png" alt="" id="image"/>
               <div class="text" id="playtext">PLAY</div>
               <h4>Rock-Paper-Scissors</h4>
             </a>  
