--- a/html/type_speed.html
+++ b/html/type_speed.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">  
     <title>Typing Speed Test Game | CodingNepal</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style/typespeed.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
