--- a/html/iframe.html
+++ b/html/iframe.html
@@ -19,7 +19,7 @@
          </a>
        </div>
        <div class="col-4">
-         <a href="#"><img src="../Images/type.png" alt="" id="image"/>
+         <a href="../html/type_speed.html"><img src="../Images/type.png" alt="" id="image"/>
           <div class="text" id="playtext">PLAY</div>
           <h4>Type speed Game</h4>
          </a>
@@ -31,7 +31,7 @@
        <h2>Memory and Recall Games</h2>
        <div class="row" >
         <div class="col-4">
-            <a href="#"><img src="../Images/woed guess.jpg" alt="" id="image"/>
+            <a href="../html/word_gues.html"><img src="../Images/woed guess.jpg" alt="" id="image"/>
               <div class="text" id="playtext">PLAY</div>
               <h4>Word Guessing </h4>
             </a>  
@@ -49,13 +49,13 @@
        <h2>Quick Decision-Making Games</h2>
        <div class="row" >
         <div class="col-4">
-            <a href="#"><img src="../Images/rock1.png" alt="" id="image"/>
+            <a href="../html/Rock_paper_scissors.html"><img src="../Images/rock1.png" alt="" id="image"/>
               <div class="text" id="playtext">PLAY</div>
               <h4>Rock-Paper-Scissors</h4>
             </a>  
           </div>
           <div class="col-4">
-            <a href="#"><img src="../Images/word scramble.jpg" alt="" id="image"/>
+            <a href="../html/word_scramble.html"><img src="../Images/word scramble.jpg" alt="" id="image"/>
               <div class="text" id="playtext">PLAY</div>
               <h4>Word Scramble</h4>
             </a>
