--- a/html/word_gues.html
+++ b/html/word_gues.html
@@ -5,8 +5,7 @@
   
 <head> 
     <title>Word Guessing Game</title> 
-    <link rel="stylesheet" 
-          href="style.css" /> 
+    <link rel="stylesheet" href="../style/word-guess.css" /> 
        <script src="./script.js"></script> 
 </head> 
   
