add js for type speed

--- a/html/type_speed.html
+++ b/html/type_speed.html
@@ -38,5 +38,6 @@
       </div>
     </div>
   <script src="../js/paragraph.js"></script>
+  <script src="../js/typespeed.js"></script>
   </body>
 </html>
