added js for rock_

--- a/html/Rock_paper_scissors.html
+++ b/html/Rock_paper_scissors.html
@@ -41,8 +41,8 @@
 			</span>
 		</div>
 	</section>
-
-	<script src="script.js" defer></script>
+<script src="../js/rock.js"></script>
+	
 </body>
 
 </html>
