added js for word gues game

--- a/html/word_gues.html
+++ b/html/word_gues.html
@@ -6,7 +6,7 @@
 <head> 
     <title>Word Guessing Game</title> 
     <link rel="stylesheet" href="../style/word-guess.css" /> 
-       <script src="./script.js"></script> 
+       <script src="../js/word_gues.js"></script> 
 </head> 
   
 <body> 
