added css for word_scramble

--- a/html/word_scramble.html
+++ b/html/word_scramble.html
@@ -9,6 +9,7 @@
 				initial-scale=1.0" /> 
 	<title>word scramble</title> 
 	<link href="style.css" rel="stylesheet" /> 
+	<link href="../style/word_scramble.css" rel="stylesheet" /> 
 </head> 
 
 <body> 
