--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  
    <link rel="stylesheet" href="./style/index.css">
    <link rel="stylesheet" href="./style/log.css">
-    
+  <link rel="stylesheet" href="style/contact.css">   
 </head>
 <body>
     <!-- navbar -->
@@ -240,7 +240,28 @@
   </div>
 </div>
 </div>
+<section id="contact-info">
+  <h2>Contact Information</h2>
+</section>
 
+<section id="contact-form">
+  <h2>Contact Form</h2>
+  <form action="submit_form.php" method="post">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" required>
+
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required>
+
+    <label for="message">Message:</label>
+    <textarea id="message" name="message" rows="4" required></textarea>
+
+    <input type="submit" value="Submit">
+  </form>
+</section>
+</body>
+
+</html>
 <footer class="text-center bg-dark text-light">
   <!-- Grid container -->
   <div class="container pt-4">
