--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
               Not a member? <a href="">Signup now</a>
            </div>
         </form>
-        <form action="#" class="signup">
+        <form action="html/game.html" class="signup">
            <div class="field">
               <input type="email" placeholder="Email Address" required>
            </div>
@@ -226,10 +226,10 @@
              <input type="text" placeholder="Username" required>
           </div>
            <div class="field">
-              <input type="password" placeholder="Password" required>
+              <input type="password" id="new_password" name="new_password" placeholder="Password" required>
            </div>
            <div class="field">
-              <input type="password" placeholder="Confirm password" required>
+              <input type="password" id="verifyPassword" name="verifyPassword" placeholder="Confirm password" required>
            </div>
            <div class="field btn">
               <div class="btn-layer"></div>
