--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <div class="slider-tab"></div>
      </div>
      <div class="form-inner">
-        <form action="./html/game.html" class="login">
+        <form action="./html/game.html" method="post" class="login">
            <div class="field">
               <input type="text" placeholder="Email Address" required>
            </div>
@@ -212,13 +212,13 @@
            </div>
            <div class="field btn">
               <div class="btn-layer"></div>
-              <input type="submit" value="Login">
+              <input type="submit" value="Login" onclick="window.location.href = './html/game.html'; return false;">
            </div>
            <div class="signup-link">
               Not a member? <a href="">Signup now</a>
            </div>
         </form>
-        <form action="html/game.html" class="signup">
+        <form action="./html/game.html" method="post" class="signup">
            <div class="field">
               <input type="email" placeholder="Email Address" required>
            </div>
@@ -233,7 +233,7 @@
            </div>
            <div class="field btn">
               <div class="btn-layer"></div>
-              <input type="submit" value="Signup">
+              <input type="submit" value="Signup" onclick="window.location.href = './html/game.html'; return false;">
            </div>
         </form>
      </div>
