--- a/html/iframe.html
+++ b/html/iframe.html
@@ -13,7 +13,7 @@
   <h2>Speed and Logic Games</h2>
     <div class="row" >
        <div class="col-4">
-         <a href="#"><img src="../Images/dicegame.png" alt="" id="image"/>
+         <a href="../html/dice.html"><img src="../Images/dicegame.png" alt="" id="image"/>
           <div class="text">PLAY</div>
            <h4>Dice Game </h4>
          </a>
@@ -37,9 +37,9 @@
             </a>  
           </div>
           <div class="col-4">
-            <a href="#"><img src="../Images/memory.jpg" alt="" id="image"/>
+            <a href="../html/memory-card.html"><img src="../Images/memory.jpg" alt="" id="image"/>
               <div class="text" id="playtext">PLAY</div>
-              <h4>Memory game </h4>
+              <h4>Memory-card game </h4>
             </a>
           </div>
        </div>
