--- a/html/game.html
+++ b/html/game.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="../index.html">HOME</a></li>
             <li><a href="../html/game.html">GAMES</a></li>
-            <li><a href="#">About us</a></li>
+            <li><a href="../index.html#contact-form">contuct us</a></li>
         </ul>
        </div>
        
