--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
                            <div class="card  text-light cardHover">
                                <div class="card-body text-center">
                                    <div class="h1 mb-3">
-                                     <img class="img-fluid images" src="./Images/math game 1.png" alt="">
+                                     <img class="img-fluid images" src="./Images/type.png" alt="">
                                    </div>
-                                   <h3 class="card-title mb-3  name ">Math Game</h3>
-                               <p class="card-text">Math games make learning enjoyable and engaging. 
-                                They motivate students to deepen their mathematical reasoning. !</p>
+                                   <h3 class="card-title mb-3  name ">Typing speed</h3>
+                               <p class="card-text">enhance your writting skill with our incredible typing speed game. 
+                               type faster and Save your time!!!</p>
                            </div>
                            </div>
                        </div>
