--- a/index.html
+++ b/index.html
@@ -181,9 +181,15 @@
   </div>
 </div>
 </section>
-<div class="bs">
-  <div class="container1">
-    <div id="login"  class="wrapper text-center  justify-content-center align-item-center">
+
+
+  <!-- Registration and login -->
+<div class="row ">
+  <div class="col  align-items-start">
+    <div class="col  align-items-start">
+      <div class="card align-items-start" >
+        <div class="card-body text-center align-items-end">
+    <div id="login"  class="wrapper">
       <div class="title-text">
          <div class="title login">
             Login Form
@@ -219,6 +225,7 @@
                   Not a member? <a href="">Signup now</a>
                </div>
             </form>
+            <!-- second form -->
             <form action="./html/game.html" method="post" class="signup">
                <div class="field">
                   <input type="email" placeholder="Email Address" required>
@@ -240,8 +247,16 @@
          </div>
       </div>
     </div>
+  </div>
+  </div>
+</div>
     </div>
-    <div class="container2">
+          <!-- contact us  -->
+  
+  <div class="col align-items-end">
+    <div class="col align-items-end">
+    <div class="card text-center">
+      <div class="card-body">
       <section id="contact-form">
         <h2>Contact Form</h2>
         <form action="submit_form.php" method="post">
@@ -258,10 +273,11 @@
         </form>
       </section>
     </div>
+    </div>
+  </div>
+    </div>
+  
 </div>
-</body>
-
-</html>
 <footer class="text-center bg-dark text-light">
   <!-- Grid container -->
   <div class="container pt-4">
