--- a/html/word_scramble.html
+++ b/html/word_scramble.html
@@ -35,7 +35,7 @@
 				Refresh 
 			</button> 
 		</div> 
-		<script src="script.js"></script> 
+		<script src="../js/word_scramble.js"></script> 
 	</div> 
 </body> 
 
