--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <div class="slider-tab"></div>
          </div>
          <div class="form-inner">
-            <form action="./html/game.html" method="post" class="login">
+            <form action="./html/iframe.html" method="post" class="login">
                <div class="field">
                   <input type="text" placeholder="Email Address" required>
                </div>
@@ -219,14 +219,14 @@
                </div>
                <div class="field btn">
                   <div class="btn-layer"></div>
-                  <input type="submit" value="Login" onclick="window.location.href = './html/game.html'; return false;">
+                  <input type="submit" value="Login">
                </div>
                <div class="signup-link">
                   Not a member? <a href="">Signup now</a>
                </div>
             </form>
             <!-- second form -->
-            <form action="./html/game.html" method="post" class="signup">
+            <form action="" method="post" class="signup">
                <div class="field">
                   <input type="email" placeholder="Email Address" required>
                </div>
