signup form validation

--- a/index.html
+++ b/index.html
@@ -228,20 +228,20 @@
             <!-- second form -->
             <form action="" method="post" class="signup">
                <div class="field">
-                  <input type="email" placeholder="Email Address" required>
+                  <input type="email" placeholder="Email Address" >
                </div>
                <div class="field">
-                 <input type="text" placeholder="Username" required>
+                 <input type="text" placeholder="Username" >
               </div>
                <div class="field">
-                  <input type="password" id="new_password" name="new_password" placeholder="Password" required>
+                  <input type="password" id="new_password" name="new_password" placeholder="Password" >
                </div>
                <div class="field">
-                  <input type="password" id="verifyPassword" name="verifyPassword" placeholder="Confirm password" required>
+                  <input type="password" id="verifyPassword" name="verifyPassword" placeholder="Confirm password" >
                </div>
                <div class="field btn">
                   <div class="btn-layer"></div>
-                  <input type="submit" value="Signup" onclick="window.location.href = './html/game.html'; return false;">
+                  <input type="submit" value="Signup">
                </div>
             </form>
          </div>
