contact from link

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
       <div class="card-body">
       <section id="contact-form">
         <h2>Contact Form</h2>
-        <form action="submit_form.php" method="post">
+        <form action="mailto:galgeduba64@gmail.com" method="post">
           <label for="name">Name:</label>
           <input type="text" id="name" name="name" required>
       
@@ -269,7 +269,7 @@
           <label for="message">Message:</label>
           <textarea id="message" name="message" rows="4" required></textarea>
       
-          <input type="submit" value="Submit">
+         <input type="submit" value="Submit">
         </form>
       </section>
     </div>
