index page social media link

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
       <a
         data-mdb-ripple-init
         class="btn btn-link btn-floating btn-lg text-body m-1"
-        href="#!"
+        href="https://www.Facebook.com"
         role="button"
         data-mdb-ripple-color="dark"
         ><i class='bx bxl-facebook'></i></a>
@@ -296,7 +296,7 @@
       <a
         data-mdb-ripple-init
         class="btn btn-link btn-floating btn-lg text-body m-1"
-        href="#!"
+        href="https://www.Twitter.com"
         role="button"
         data-mdb-ripple-color="dark"
         ><i class='bx bxl-twitter'></i></a>
@@ -305,7 +305,7 @@
       <a
         data-mdb-ripple-init
         class="btn btn-link btn-floating btn-lg text-body m-1"
-        href="#!"
+        href="https://www.google.com"
         role="button"
         data-mdb-ripple-color="dark"
         ><i class='bx bxl-google'></i></a>
@@ -314,7 +314,7 @@
       <a
         data-mdb-ripple-init
         class="btn btn-link btn-floating btn-lg text-body m-1"
-        href="#!"
+        href="https://www.Instagram.com"
         role="button"
         data-mdb-ripple-color="dark"
         ><i class='bx bxl-instagram'></i></a>
@@ -323,7 +323,7 @@
       <a
         data-mdb-ripple-init
         class="btn btn-link btn-floating btn-lg text-body m-1"
-        href="#!"
+        href="https://www.Linkedin.com/in/galgalo-duba"
         role="button"
         data-mdb-ripple-color="dark"
         ><i class='bx bxl-linkedin'></i></a>
@@ -331,7 +331,7 @@
       <a
         data-mdb-ripple-init
         class="btn btn-link btn-floating btn-lg text-body m-1"
-        href="#!"
+        href="https://github.com/GalgaloDuba/Online-Game-Website"
         role="button"
         data-mdb-ripple-color="dark"
         ><i class='bx bxl-github'></i></a>
