social media links

--- a/html/game.html
+++ b/html/game.html
@@ -44,11 +44,11 @@
       <footer>
         <div class="social" id="social">
           <ul>
-            <li><a href="#"><button><i class="fa fa-facebook"></i></button></a></li>
-            <li><a href="#"><button><i class="fa fa-twitter"></i></button></a></li>
-            <li><a href="#"><button><i class="fa fa-google"></i></button></a></li>
-            <li><a href="#"><button><i class="fa fa-instagram"></i></button></a></li>
-            <li><a href="#"><button><i class="fa fa-linkedin"></i></button></a></li>
+            <li><a href="https://www.Facebook.com"><button><i class="fa fa-facebook"></i></button></a></li>
+            <li><a href="https://www.twitter.com"><button><i class="fa fa-twitter"></i></button></a></li>
+            <li><a href="https://www.google.com"><button><i class="fa fa-google"></i></button></a></li>
+            <li><a href="https://www.Instagram.com"><button><i class="fa fa-instagram"></i></button></a></li>
+            <li><a href="https://www.Linkedin.com/in/galgalo-duba"><button><i class="fa fa-linkedin"></i></button></a></li>
             <li><a href="https://github.com/GalgaloDuba/Online-Game-Website"><button><i class="fa fa-github"></i></button></a></li>
           </ul>
         </div>
