--- a/html/Rock_paper_scissors.html
+++ b/html/Rock_paper_scissors.html
@@ -40,6 +40,7 @@
 				<p>Scissors</p>
 			</span>
 		</div>
+		<a href="./iframe.html">Back</a>
 	</section>
 <script src="../js/rock.js"></script>
 	
