--- a/html/dice.html
+++ b/html/dice.html
@@ -30,5 +30,6 @@
 
       <footer>
         <a href="../html/dice.html"><button >play</button></a>
+        <a href="./iframe.html">Back</a>
       </footer>
     </html>
