--- a/html/type_speed.html
+++ b/html/type_speed.html
@@ -34,6 +34,7 @@
             </li>
           </ul>
           <button>Try Again</button>
+          <a href="./iframe.html">Back</a>
         </div>
       </div>
     </div>
