--- a/html/word_gues.html
+++ b/html/word_gues.html
@@ -24,6 +24,7 @@
         <button onclick="guessLetter()"> 
               Submit 
           </button> 
+          <a href="./iframe.html">Back</a>
     </div> 
 </body> 
   
