--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="container">
                 <div id="Strategy" class="row  g-5 ">
                   <div class="float-start">
-                   <h1>Strategy and Logic Games</h1>
+                   <h1>Speed and Logic Games</h1>
                 <p>
                   Challenge yourself with a variety of games that target your processing speed.</p>
                 </div>
@@ -215,7 +215,7 @@
                   <input type="password" placeholder="Password" required>
                </div>
                <div class="pass-link">
-                  <a href="#">Forgot password?</a>
+                  <a href="mailto:galgeduba64@gmail.com">Forgot password?</a>
                </div>
                <div class="field btn">
                   <div class="btn-layer"></div>
