--- a/html/word_scramble.html
+++ b/html/word_scramble.html
@@ -34,6 +34,7 @@
 					onclick="refresh()"> 
 				Refresh 
 			</button> 
+			<a href="./iframe.html">Back</a>
 		</div> 
 		<script src="../js/word_scramble.js"></script> 
 	</div> 
