--- a/html/word_scramble.html
+++ b/html/word_scramble.html
@@ -22,8 +22,8 @@
 		<div id="form"> 
 			<input id="input"
 				type="text"
-				placeholder="Guess correct word" /> 
-		</div> 
+				placeholder="Guess correct word" />	
+			</div> 
 		<h3 id="output">Result:</h3> 
 		<div class="foot"> 
 			<button type="button"
@@ -35,8 +35,9 @@
 				Refresh 
 			</button> 
 		</div> 
-		<script src="../js/word_scramble.js"></script> 
+		<!--<script src="../js/word_scramble.js"></script> 
 	</div> 
+-->
 </body> 
 
 </html>
