--- a/html/word_scramble.html
+++ b/html/word_scramble.html
@@ -35,9 +35,8 @@
 				Refresh 
 			</button> 
 		</div> 
-		<!--<script src="../js/word_scramble.js"></script> 
+		<script src="../js/word_scramble.js"></script> 
 	</div> 
--->
 </body> 
 
 </html>
